@@ -34,7 +34,7 @@ p {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -42,7 +42,7 @@ p {
     font-size: 20px;
 }
 
-.header div ul li {
+.header nav ul li {
     list-style-type: none;
     display: inline-block;
     margin-left: 25px;
@@ -77,7 +77,7 @@ p {
     margin-left: 20px;
 }
 
-.content div {
+.content section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -86,11 +86,11 @@ p {
     color: #ffffff;
 }
 
-.content div img {
+.content section img {
     max-height: 200px;
 }
 
-.content div h2 {
+.content section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -109,17 +109,17 @@ p {
     background-color: #2589bd;
 }
 
-.benefits div{
+.benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits div h3 {
+.benefits section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits div img {
+.benefits section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -127,13 +127,13 @@ p {
 
 /*footer styling*/
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h4 {
+footer h4 {
     font-size: 20px;
 }
