@@ -9,9 +9,9 @@
 
     <body>
         <!--header: includes name of company and links to different sections-->
-        <div class="header">
+        <header class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
+            <nav>
                 <ul>
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,69 +23,69 @@
                         <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
-            </div>
-        </div>
+            </nav>
+        </header>
 
         <!--hero image-->
-        <div class="hero"></div>
+        <figure class="hero"></figure>
 
         <!--Content-->
-        <div class="content">
-            <div id="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO graphic"/>
+        <section class="content">
+            <section id="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            </section>
+            <section id="online-reputation-management">
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div id="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt ="social media graphic"/>
+            </section>
+            <section id="social-media-marketing">
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </div>
-        </div>
+            </section>
+        </section>
 
         <!--Benefits-->
-        <div class="benefits">
-            <div>
+        <aside class="benefits">
+            <section>
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div>
+            </section>
+            <section>
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div>
+            </section>
+            <section>
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="" />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
-        </div>
+            </section>
+        </aside>
 
         <!--footer-->
-        <div class="footer">
+        <footer>
             <h4>Made with ❤️️ by Horiseon</h4>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
-        </div>
+        </footer>
     </body>
 
 </html>
